# Currency-Exchange-Bot

./: .env.example  .gitignore  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
services/: db.py  exchanger.py  rates_updater.py
templates/: exchange_result.txt  rates.txt
